# HAF_Search

./: .gitignore  AGENTS.md  Cargo.toml  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_PLAN.md  WORKFLOW_REDESIGN.md  build.bat  build.sh  create_test_files.ps1  sample_ids.csv  test_runner.ps1
src/: database.rs  gpu.rs  gui.rs  main.rs  match_engine.rs  matcher.rs  opener.rs  reference_loader.rs  scanner.rs  searcher.rs  vectorizer.rs
