[package]
name = "tiff_locator"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
csv = "1.3"
fuzzy-matcher = "0.3"
rayon = "1.8"
rfd = "0.14"
eframe = "0.28"
egui = "0.28"
open = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
wgpu = { version = "0.20.1", default-features = false, features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
futures = "0.3"

[features]
default = []
gpu-smoke = []


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
